cros launcher: Check for whitespace query.

Instead of transitioning to HALF or FULLSCREEN_SEARCH whenever the
search query is not empty, transition only when the query is not empty
and contains some non-whitespace characters.

This will be changed when Zero Query State is introduced, at a later
date.

for-Commit-Position: refs/heads/master@{#487254}
Bug: 746048
Change-Id: I78a2eb73589d3a13c2213d9f4f1d26f2c6162dc8
Reviewed-on: https://chromium-review.googlesource.com/578470
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Yury Khmel <khmel@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#488474}
Former-commit-id: 29666b56da43d3819ceeab32cd889c228c6b4126