ui/app_list/views/search_result_list_view.cc
@@ -60,8 +60,7 @@ SearchResultListView::SearchResultListView(
   AddChildView(auto_launch_indicator_);
 }
 
-SearchResultListView::~SearchResultListView() {
-}
+SearchResultListView::~SearchResultListView() {}
 
 bool SearchResultListView::IsResultViewSelected(
     const SearchResultView* result_view) const {
@@ -163,8 +162,7 @@ int SearchResultListView::GetYSize() {
 int SearchResultListView::DoUpdate() {
   std::vector<SearchResult*> display_results =
       AppListModel::FilterSearchResultsByDisplayType(
-          results(),
-          SearchResult::DISPLAY_LIST,
+          results(), SearchResult::DISPLAY_LIST,
           results_container_->child_count());
 
   for (size_t i = 0; i < static_cast<size_t>(results_container_->child_count());
@@ -250,8 +248,8 @@ void SearchResultListView::AnimationProgressed(
     const gfx::Animation* animation) {
   DCHECK_EQ(auto_launch_animation_.get(), animation);
   int indicator_width = auto_launch_animation_->CurrentValueBetween(0, width());
-  auto_launch_indicator_->SetBounds(
-      0, 0, indicator_width, kTimeoutIndicatorHeight);
+  auto_launch_indicator_->SetBounds(0, 0, indicator_width,
+                                    kTimeoutIndicatorHeight);
 }
 
 void SearchResultListView::SearchResultActivated(SearchResultView* view,
@@ -264,8 +262,8 @@ void SearchResultListView::SearchResultActionActivated(SearchResultView* view,
                                                        size_t action_index,
                                                        int event_flags) {
   if (view_delegate_ && view->result()) {
-    view_delegate_->InvokeSearchResultAction(
-        view->result(), action_index, event_flags);
+    view_delegate_->InvokeSearchResultAction(view->result(), action_index,
+                                             event_flags);
   }
 }
 
